[package]
name = "NebulaChain"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
bincode = "2.0.1"
ed25519-dalek = "2.2.0"
metrics = "0.24.2"
metrics-exporter-prometheus = "0.17.2"
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
sha2 = "0.10.9"
sled = "0.34.7"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
warp = "0.4.2"
